--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.3.1",
     "react-moment": "^0.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-native-particles": "0.0.7",
     "react-navigation": "^2.17.0"
   }
 }
